--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,6 @@ requires = ["flit_core >=3.2,<4"]
 build-backend = "flit_core.buildapi"
 
 [project]
-name = "Istio & Envoy 内幕"
+name = "面向技术宅的 JVM 内幕"
 authors = [{name = "Mark Zhu", email = "labile.zhu@gmail.com"}]
 dynamic = ["version", "description"]
